--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
 DB_URL= mongodb://localhost:27017
-SECRET_KEY= abcd
+SECRET_KEY= jjhukjhg678yurioiihgdqw23456y7ijhgf
+# abcdd234f5g6789j7tuytfrghyjukilioiihgdqw23456y7ijhgf
